--- a/css/valoros.css
+++ b/css/valoros.css
@@ -332,9 +332,9 @@ section{
 .indexmain{
   background-image: linear-gradient(    
     rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.6)),
-    url("../img/IMG_9784.JPG");
-    /* background-size: cover; */
+    rgba(0, 0, 0, 0.6)),   
+    url("../img/IMG_9784.webp");
+    background-size: cover;
   z-index: 99999;
 }
 
