--- a/css/valoros.css
+++ b/css/valoros.css
@@ -17,8 +17,9 @@ html{
 body{
   font-family: 'Roboto Condensed', sans-serif;
   /* font-family: 'Roboto', sans-serif; */
-  background-color: #d5d5d5;
+  /* background-color: #d5d5d5; */
   /* justify-content: space-between; */
+  background-color: #1A1A1A;
 }
 
 
@@ -91,11 +92,48 @@ header ul{
   color: #363636;
 }
 
-
-
-h1{
-  color: var(--gold);
+.products-section .card-link {
+    text-decoration: none; /* Quita el subrayado de los enlaces */
+    color: inherit; /* Hereda el color del texto */
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Transición suave para los efectos */
+    display: block; /* Asegura que el enlace ocupe todo el espacio de la tarjeta */
 }
+
+.products-section .card-link:hover {
+    transform: translateY(-5px); /* Eleva ligeramente la tarjeta */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4); /* Añade una sombra más pronunciada */
+}
+
+.products-section .product-card {
+    border: 1px solid #F3B830; /* Borde sutil del color de tu línea de oro */
+    overflow: hidden; /* Asegura que nada se salga de los bordes redondeados */
+}
+
+.products-section .product-card .card-img-top {
+    transition: transform 0.3s ease-in-out; /* Transición para el zoom de la imagen */
+}
+
+.products-section .card-link:hover .product-card .card-img-top {
+    transform: scale(1.05); /* Ligeramente más grande al pasar el mouse */
+}
+
+.card2-img-top{
+  transition: transform 0.3s ease-in-out; /* Transición para el zoom de la imagen */
+}
+
+.card2-img-top:hover {
+  transform: scale(1.05); /* Ligeramente más grande al pasar el mouse */
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #ccc;
+  opacity: 1;
+}
+
+/* h1{
+  color: var(--gold);
+} */
 
 .active{
   color: var(--gold);  
@@ -107,7 +145,7 @@ h1{
 
 .hero-section {
   position: relative;
-  height: 80vh; 
+  height: 90vh; 
   overflow: hidden;
 }
 
@@ -174,6 +212,7 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: space-evenly;
 }
 
 
@@ -276,6 +315,11 @@ nav li {
 .item_contact{
   padding: 20px 0 8px 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
   background: linear-gradient(180deg, var(--negro) 0%, var(--black2) 100%);
 }
 
@@ -325,15 +369,24 @@ section{
   color:#FFF;
 }
 
-.main, .container{
+/* .main, .container{
   background-color: var(--black2);
-}
+} */
 
 .indexmain{
   background-image: linear-gradient(    
     rgba(0, 0, 0, 0.6),
     rgba(0, 0, 0, 0.6)),   
     url("../img/IMG_9784.webp");
+    background-size: cover;
+  z-index: 99999;
+}
+
+.fondosection{
+  background-image: linear-gradient(    
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.6)),   
+    url("../img/Oro-plata.webp");
     background-size: cover;
   z-index: 99999;
 }
@@ -354,6 +407,22 @@ section{
   /* background-color: blue; */
   position: relative;
   animation: moverDiv 3s linear infinite;
+}
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 60px;
+  right: 20px;
+  z-index: 1000;
+  background-color: #25D366;
+  border-radius: 50%;
+  padding: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
 }
 
 @keyframes moverDiv {
