--- a/css/valoros.css
+++ b/css/valoros.css
@@ -452,3 +452,44 @@ section{
 
 .blur-in-expand{animation:blur-in-expand 0.4s linear both} 
 @keyframes blur-in-expand{0%{transform:scale(0);filter:blur(12px);opacity:0}100%{transform:scale(1);filter:blur(0);opacity:1}}
+
+
+/* seccion productos relacionados */
+.carousel-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.5s ease;
+  gap: 1rem;
+  /* will-change: transform; */
+}
+
+.carousel-item2 {
+  flex: 0 0 auto;
+  width: 250px; 
+}
+
+.carousel-btn {
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  font-size: 2rem;
+  color: white;
+  padding: 0.3em 0.6em;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.carousel-btn.left {
+  left: -15px;
+}
+
+.carousel-btn.right {
+  right: -15px;
+}
