--- a/css/valoros.css
+++ b/css/valoros.css
@@ -1,495 +1,1 @@
-:root{
-  --gold: #F3B830;
-  --negro: #373735;
-  --black2:#30353B;
-}
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;  
-}
-
-html{
-  scroll-behavior: smooth;
-}
-
-body{
-  font-family: 'Roboto Condensed', sans-serif;
-  /* font-family: 'Roboto', sans-serif; */
-  /* background-color: #d5d5d5; */
-  /* justify-content: space-between; */
-  background-color: #1A1A1A;
-}
-
-
-/*aside oculto*/
-
-aside{     
-  width: 100%; 
-  position: absolute;
-  transition: all 0.5s;
-  transform: translateX(-111%);
-  height: 100vh;
-  background-color: rgb(0, 0, 0,0.9); 
-  z-index: 1000; 
-}
-
-aside ul li{
-  list-style: none;   
-}
-
-.menu-item:hover{
-  background-color: var(--gold);
-  color: var(--negro)  
-}
-
-.menu-item .active{  
-  color: var(--gold) 
-}
-
-.menu-item a{  
-  color: white; 
-}
-
-
-/* aside ul li:hover{
-  background-color: var(--gold);
-  color: var(--negro)  
-} */
-
-.close-bar{
-  cursor: pointer;  
-}
-
-.icon-menu{ 
-  width: 13%;   
-  display: block;
-  padding-left: 10px;
-}
-
-
-/* cabecero blanco */
-header{  
-  background-color: white;  
-  margin: 0 auto; 
-}
-
-header ul{
-  gap: 10px;
-  list-style: none;  
-  align-items: center;
-  margin-right: 10px;  
-}
-
-
-
-.nav-link:hover {
-  color: #fbb231;  
-}
-
-.nav-link{
-  color: #363636;
-}
-
-.products-section .card-link {
-    text-decoration: none; /* Quita el subrayado de los enlaces */
-    color: inherit; /* Hereda el color del texto */
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Transición suave para los efectos */
-    display: block; /* Asegura que el enlace ocupe todo el espacio de la tarjeta */
-}
-
-.products-section .card-link:hover {
-    transform: translateY(-5px); /* Eleva ligeramente la tarjeta */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4); /* Añade una sombra más pronunciada */
-}
-
-.products-section .product-card {
-    border: 1px solid #F3B830; /* Borde sutil del color de tu línea de oro */
-    overflow: hidden; /* Asegura que nada se salga de los bordes redondeados */
-}
-
-.products-section .product-card .card-img-top {
-    transition: transform 0.3s ease-in-out; /* Transición para el zoom de la imagen */
-}
-
-.products-section .card-link:hover .product-card .card-img-top {
-    transform: scale(1.05); /* Ligeramente más grande al pasar el mouse */
-}
-
-.card2-img-top{
-  transition: transform 0.3s ease-in-out; /* Transición para el zoom de la imagen */
-}
-
-.card2-img-top:hover {
-  transform: scale(1.05); /* Ligeramente más grande al pasar el mouse */
-}
-
-input::placeholder,
-textarea::placeholder {
-  color: #ccc;
-  opacity: 1;
-}
-
-/* h1{
-  color: var(--gold);
-} */
-
-.active{
-  color: var(--gold);  
-}
-
-.footer_div2{  
-  background-color: #363636;
-}
-
-.hero-section {
-  position: relative;
-  height: 90vh; 
-  overflow: hidden;
-}
-
- .video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  /* z-index: 100;  */
-} 
-
-.hero-section::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 187, 0, 0.2); 
-  z-index: 1;
-}
-
-
-nav {
-  font-size: 1.1rem; /* Tamaño de letra fs-4 de Bootstrap */
-}
-
-.icon-menu{
-  display: none;
-}
-
-@media (max-width: 576px) {
-  nav {
-    font-size: 0.8rem; /* Tamaño de letra fs-4 de Bootstrap */
-    display: flex;
-  }
-
-  .icon-menu{
-    display: block;
-  }
-
-  header ul{
-    display: none;
-  }
-
-  .hero-section {    
-    height: 45vh;    
-  }
- 
-}
-
-
-
-/* solo para nav nuevo */
-nav {
-  position: relative; /* Agregado para establecer la posición de referencia para z-index */
-  z-index: 99; /* Agregado para establecer el valor de z-index */
-}
-
-nav ul {
-  list-style: none; 
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-
-
-nav li {
-
-  position: relative;
-}
-
-
-
-.submenu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  display: none;
-  width: 240px;
-}
-
-
-/* muestra submenu al pasar el mouse */
-.has-submenu:hover > .submenu {
-  display: block;    
-}
-
-.submenu li {  
-  display: block;
-}
-
-
-.submenu .has-submenu {
-  position: relative;
-}
-
-.submenu .has-submenu > .submenu {
-  position: absolute;
-  top: 0;
-  left: 100%;
-  display: none;
-  
-}
-
-.submenu .has-submenu:hover > .submenu {
-  display: block;
-  width: 100%;
-
-}
-
-.dark, .dark .submenu{
-  background-color: #363636; 
-}
-
-.dark a{
-  color: white;
-  /* background-color: #363636; */
-  width: 100%;
-  display: block;
-  text-decoration: none;
-}
-
-.dark a:hover{
-  color: white;
-  background-color: #fbb231;
-}
-
-.iconos_sobre_nosotros{
-  display: block;  
-}
-
-.iconos_sobre_nosotros img{
-  width: 80px;
-}
-
-.main-li{      
-  overflow: hidden;
-  cursor: pointer;
-}
-
-#menu-bar{
-  display: none; 
-}
-
-#menu-bar:checked ~ .aside{
-  transform: translateX(0%);
-}
-
-.main-li ul a{
-  width: 100%;
-  color: white;
-  display: block;
-  padding: 0.75rem 1rem 0.75rem 2.5rem; 
-  text-decoration: none;
-  font-size: 1.2rem !important;
-}
-
-.contact{
-  color: #FFF;
-}
-
-.item_contact{
-  padding: 20px 0 8px 0;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  background: linear-gradient(180deg, var(--negro) 0%, var(--black2) 100%);
-}
-
-.item_contact--gold{
-  background: linear-gradient(180deg, var(--gold) 0%, white 100%);
-  color: var(--negro);
-}
-
-.contact_icon{
-  font-size: 18px;
-  color: var(--gold);
-
-}
-
-.contact_icon--modifier{
-  color: var(--black2);
-}
-
-.contact_title{
-  font-size: 14px;
-}
-
-.circle {
-  width: 100px;
-  height: 100px;
-  background-color: var(--gold);
-  border-radius: 50%; /* Aplica la forma de círculo */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
-  color: black;
-}
-
-.social-icon{
-  width: 2em; 
-  cursor: pointer;
-  width: 40px;
-}
-
-.titulo_valores, h5{
-  color: var(--gold);
-}
-
-section{
-  color:#FFF;
-}
-
-/* .main, .container{
-  background-color: var(--black2);
-} */
-
-.indexmain{
-  background-image: linear-gradient(    
-    rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.6)),   
-    url("../img/IMG_9784.webp");
-    background-size: cover;
-  z-index: 99999;
-}
-
-.fondosection{
-  background-image: linear-gradient(    
-    rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.6)),   
-    url("../img/Oro-plata.webp");
-    background-size: cover;
-  z-index: 99999;
-}
-
-.call-to-action{
-  /* background-color: lightgray; */
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-
-.shake-horizontal {
-  /* width: 100px;
-  height: 100px; */
-  /* background-color: blue; */
-  position: relative;
-  animation: moverDiv 3s linear infinite;
-}
-
-.whatsapp-float {
-  position: fixed;
-  bottom: 60px;
-  right: 20px;
-  z-index: 1000;
-  background-color: #25D366;
-  border-radius: 50%;
-  padding: 10px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-  transition: transform 0.3s ease;
-}
-
-.whatsapp-float:hover {
-  transform: scale(1.1);
-}
-
-@keyframes moverDiv {
-  0% {
-    left: 0;
-  }
-  10% {
-    left: 25px; /* Mueve el div a la derecha */
-  }
-  20% {
-    left: 0px; /* Sigue moviéndose hacia la derecha */
-  }
-  75% {
-    left: 0; /* Vuelve a la posición inicial */
-  }
-  100% {
-    left: 0; /* Permanece en la posición inicial */
-  }
-}
-
-/* ----------------------------------------------
-  Generated by AnimatiSS
-  Licensed under FreeBSD License
-  URL: https://xsgames.co/animatiss
-  Twitter: @xsgames_
----------------------------------------------- */
-
-.blur-in-expand{animation:blur-in-expand 0.4s linear both} 
-@keyframes blur-in-expand{0%{transform:scale(0);filter:blur(12px);opacity:0}100%{transform:scale(1);filter:blur(0);opacity:1}}
-
-
-/* seccion productos relacionados */
-.carousel-wrapper {
-  overflow: hidden;
-  position: relative;
-}
-
-.carousel-track {
-  display: flex;
-  transition: transform 0.5s ease;
-  gap: 1rem;
-  /* will-change: transform; */
-}
-
-.carousel-item2 {
-  flex: 0 0 auto;
-  width: 250px; 
-}
-
-.carousel-btn {
-  position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
-  z-index: 1;
-  background: rgba(0, 0, 0, 0.5);
-  border: none;
-  font-size: 2rem;
-  color: white;
-  padding: 0.3em 0.6em;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.carousel-btn.left {
-  left: -15px;
-}
-
-.carousel-btn.right {
-  right: -15px;
-}
+:root{--gold:#F3B830;--negro:#373735;--black2:#30353B}*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:'Roboto Condensed',sans-serif;background-color:#1A1A1A}aside{width:100%;position:absolute;transition:all 0.5s;transform:translateX(-111%);height:100vh;background-color:rgb(0 0 0 / .9);z-index:1000}aside ul li{list-style:none}.menu-item:hover{background-color:var(--gold);color:var(--negro)}.menu-item .active{color:var(--gold)}.menu-item a{color:#fff}.close-bar{cursor:pointer}.icon-menu{width:13%;display:block;padding-left:10px}header{background-color:#fff;margin:0 auto}header ul{gap:10px;list-style:none;align-items:center;margin-right:10px}.nav-link:hover{color:#fbb231}.nav-link{color:#363636}.products-section .card-link{text-decoration:none;color:inherit;transition:transform 0.3s ease-in-out,box-shadow 0.3s ease-in-out;display:block}.products-section .card-link:hover{transform:translateY(-5px);box-shadow:0 10px 20px rgb(0 0 0 / .4)}.products-section .product-card{border:1px solid #F3B830;overflow:hidden}.products-section .product-card .card-img-top{transition:transform 0.3s ease-in-out}.products-section .card-link:hover .product-card .card-img-top{transform:scale(1.05)}.card2-img-top{transition:transform 0.3s ease-in-out}.card2-img-top:hover{transform:scale(1.05)}input::placeholder,textarea::placeholder{color:#ccc;opacity:1}.active{color:var(--gold)}.footer_div2{background-color:#363636}.hero-section{position:relative;height:90vh;overflow:hidden}.video-background{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover}.hero-section::before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-color:rgb(255 187 0 / .2);z-index:1}nav{font-size:1.1rem}.icon-menu{display:none}@media (max-width:576px){nav{font-size:.8rem;display:flex}.icon-menu{display:block}header ul{display:none}.hero-section{height:45vh}}nav{position:relative;z-index:99}nav ul{list-style:none;margin:0;padding:0;display:flex;justify-content:space-evenly}nav li{position:relative}.submenu{position:absolute;top:100%;left:0;display:none;width:240px}.has-submenu:hover>.submenu{display:block}.submenu li{display:block}.submenu .has-submenu{position:relative}.submenu .has-submenu>.submenu{position:absolute;top:0;left:100%;display:none}.submenu .has-submenu:hover>.submenu{display:block;width:100%}.dark,.dark .submenu{background-color:#363636}.dark a{color:#fff;width:100%;display:block;text-decoration:none}.dark a:hover{color:#fff;background-color:#fbb231}.iconos_sobre_nosotros{display:block}.iconos_sobre_nosotros img{width:80px}.main-li{overflow:hidden;cursor:pointer}#menu-bar{display:none}#menu-bar:checked~.aside{transform:translateX(0%)}.main-li ul a{width:100%;color:#fff;display:block;padding:.75rem 1rem .75rem 2.5rem;text-decoration:none;font-size:1.2rem!important}.contact{color:#FFF}.item_contact{padding:20px 0 8px 0;text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:8px;background:linear-gradient(180deg,var(--negro) 0%,var(--black2) 100%)}.item_contact--gold{background:linear-gradient(180deg,var(--gold) 0%,white 100%);color:var(--negro)}.contact_icon{font-size:18px;color:var(--gold)}.contact_icon--modifier{color:var(--black2)}.contact_title{font-size:14px}.circle{width:100px;height:100px;background-color:var(--gold);border-radius:50%;display:flex;justify-content:center;align-items:center;font-size:18px;font-weight:700;color:#000}.social-icon{width:2em;cursor:pointer;width:40px}.titulo_valores,h5{color:var(--gold)}section{color:#FFF}.indexmain{background-image:linear-gradient(rgb(0 0 0 / .6),rgb(0 0 0 / .6)),url(../img/IMG_9784.webp);background-size:cover;z-index:99999}.fondosection{background-image:linear-gradient(rgb(0 0 0 / .6),rgb(0 0 0 / .6)),url(../img/Oro-plata.webp);background-size:cover;z-index:99999}.call-to-action{width:50%;display:flex;justify-content:center;align-items:center}.shake-horizontal{position:relative;animation:moverDiv 3s linear infinite}.whatsapp-float{position:fixed;bottom:60px;right:20px;z-index:1000;background-color:#25D366;border-radius:50%;padding:10px;box-shadow:0 2px 10px rgb(0 0 0 / .3);transition:transform 0.3s ease}.whatsapp-float:hover{transform:scale(1.1)}@keyframes moverDiv{0%{left:0}10%{left:25px}20%{left:0}75%{left:0}100%{left:0}}.blur-in-expand{animation:blur-in-expand 0.4s linear both}@keyframes blur-in-expand{0%{transform:scale(0);filter:blur(12px);opacity:0}100%{transform:scale(1);filter:blur(0);opacity:1}}.carousel-wrapper{overflow:hidden;position:relative}.carousel-track{display:flex;transition:transform 0.5s ease;gap:1rem}.carousel-item2{flex:0 0 auto;width:250px}.carousel-btn{position:absolute;top:40%;transform:translateY(-50%);z-index:1;background:rgb(0 0 0 / .5);border:none;font-size:2rem;color:#fff;padding:.3em .6em;border-radius:50%;cursor:pointer}.carousel-btn.left{left:-15px}.carousel-btn.right{right:-15px}
